--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -2207,7 +2207,7 @@ header {
 .account-setting-inner .form-group {margin-bottom: 17px; position: relative;}
 .account-setting-inner .form-group input::placeholder {color: rgba(0, 0, 0, 0.4); }
 .account-setting-inner .form-group .form-control {background: #FFFFFF; border-radius: 3.12758px; box-shadow: none; outline: none; padding: 15px 15px 15px 40px;border: none; font-weight: 400; font-size: 14.2736px; line-height: 13px; color: rgba(0, 0, 0, 0.4);height: 48px; }
-.account-setting-inner .form-group span {position: absolute; top: 50%; transform: translateY(-50%); width: 40px; height: 100%; display: flex; align-items: center; justify-content: center; }
+.account-setting-inner .form-group span {position: absolute; top: 65%; padding-left: 10px; transform: translateY(-50%); width: 40px; height: 100%; display: block; align-items: center; justify-content: center; }
 .account-setting-inner select.form-control {background-image: url(../images/select-drop-icon.png) !important; background-repeat: no-repeat !important; background-position: 95% !important; }
 .account-setting-inner .form-group .form-control.date-form {background-image: url(../images/date-info-gree-icon.png) !important; background-repeat: no-repeat !important; background-position: 95% !important; }
 .btn.btn-profile {width: 100%; background: #2FB463; border-radius: 3.12758px; font-weight: 500; font-size: 18.7341px; line-height: 13px; padding: 15px 30px; color: #FFF; max-width: 362px; }
@@ -2219,8 +2219,8 @@ header {
 .changepassword-blog .change-password-inner {height: calc(100vh - 111px); padding: 150px 120px 80px; overflow: auto; position: relative; z-index: 0; scrollbar-color: #C3EAD4 #C3EAD4; scrollbar-width: thin; -webkit-overflow-scrolling: touch; display: flex; align-items: center; justify-content: center; }
 .changepassword-blog .change-password-inner .change-password-form {max-width: 345px; width: 100%; }
 .changepassword-blog .change-password-inner .change-password-form h2 {text-align: center; font-size: 22px; line-height: 27px; color: #455A64; padding-bottom: 30px; margin: 0; font-weight: 600; }
-.account-setting-inner .form-group.number-input .form-control {padding-left: 115px; }
-.account-setting-inner .form-group.number-input .group {position: absolute; top: 0; bottom: 0; height: 100%;width:100px; display: flex;align-items: center;display: -webkit-flex;}
+.account-setting-inner .form-group.number-input .form-control {padding-left: 96px; }
+.account-setting-inner .form-group.number-input .group {position: absolute; top: 0; bottom: 0; height: 100%;width:80px; display: flex;align-items: center;display: -webkit-flex;}
 .account-setting-inner .form-group.number-input .group .form-control {padding: 0 4px; height: 20px; border-right: 1px solid #DDD; line-height: 19px; font-size: 12px; border-radius: 0; background-size: 10px !important; background-position: 84% !important;}
 
 .account-setting-inner .form-group.number-input .group .con.form-control {background: transparent !important; }
@@ -3088,7 +3088,7 @@ li.messageSent .body_content-chat .comments-bar .commentsright a {
 
 .login .loginrightbox_form .form-resend a {
     color: #2FB463;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .login .loginrightbox_form .form-resend a:hover {
@@ -3188,7 +3188,7 @@ li.messageSent .body_content-chat .comments-bar .commentsright a {
 
 .back-to-login a {
     color: #2FB463;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .back-to-login a:hover {
